# Valor-NG

./: CMakeLists.txt  CMakePresets.json  build.bat  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt
